Se muestran los graficos de barras de forma horizaontal para las pregunta que correponde por defecto

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -80,12 +80,12 @@
 
             @*Se ocupa poner una restriccion para no mostrar seciones repetidas*@
 
-        if (secciones.Contains(seccion_actual)) { seccion_repetida = true; }
-        else { secciones.Add(seccion_actual); seccion_repetida = false; }
+            if (secciones.Contains(seccion_actual)) { seccion_repetida = true; }
+            else { secciones.Add(seccion_actual); seccion_repetida = false; }
 
 
-        if (seccion_repetida == false)
-        {
+            if (seccion_repetida == false)
+            {
 
                 <div class="panel panel-default ">
                     <div class="panel-heading">
@@ -119,13 +119,17 @@
 
                                                     @if (seccion.Item.TipoPregunta != 1)
                                                     {
-                                                        @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
-                                                        //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
-                                                        <p id="graf_@item_actual" style="float:inherit"></p>
-                                                        <div id="contenedorGrafo">
-                                                            <canvas id="pie_chart_@item_actual"></canvas>
-                                                        </div> 
-                                                        <script>
+                                                        if (seccion.Item.TipoPregunta == 2 || seccion.Item.TipoPregunta == 3 || seccion.Item.TipoPregunta == 6)
+                                                        {
+
+
+                                                            @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
+                                                            //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
+                                                            <p id="graf_@item_actual" style="float:inherit"></p>
+                                                            <div id="contenedorGrafo">
+                                                                <canvas id="pie_chart_@item_actual"></canvas>
+                                                            </div>
+                                                            <script>
                                                         $.ajax({
                                                             type: "POST",
                                                             url: "/VisualizarFormulario/GraficoPie/?itemId=@seccion.Item.ItemId",
@@ -175,20 +179,96 @@
                                                                     }]
                                                                 };
                                                                 var ctx = $("#pie_chart_@item_actual").get(0).getContext("2d");
-                                                                var barChart = new Chart(ctx, {
-                                                                    type: 'pie',
-                                                                    data: dataT,
-                                                                    options: {
-                                                                        responsive: true,
-                                                                        maintainAspectRatio: false,
-                                                                        scales: { xaxes: [{ ticks: { beginAtZero: true } }] },
-                                                                        legend: { display: true },
 
-                                                                    },
-                                                                })
+                                                                    var barChart = new Chart(ctx, {
+                                                                        type: 'pie',
+                                                                        data: dataT,
+                                                                        options: {
+                                                                            responsive: true,
+                                                                            maintainAspectRatio: false,
+                                                                            scales: { xaxes: [{ ticks: { beginAtZero: true } }] },
+                                                                            legend: { display: true },
+
+                                                                        },
+                                                                    })
+
                                                             }
                                                         });
-                                                        </script>
+                                                            </script>
+                                                        }
+                                                        else
+                                                        {
+                                                            <p id="graf_@item_actual" style="float:inherit"></p>
+                                                            <div id="contenedorGrafo">
+                                                                <canvas id="pie_chart_@item_actual"></canvas>
+                                                            </div>
+                                                            <script>
+                                                        $.ajax({
+                                                            type: "POST",
+                                                            url: "/VisualizarFormulario/GraficoPie/?itemId=@seccion.Item.ItemId",
+                                                            //data{ itemId: @seccion.Item.ItemId },
+                                                            contentType: "application/json; charset=utf-8",
+                                                            dataType: "json",
+                                                            success: function (chData) {
+                                                                var aData = chData;
+                                                                var aLabels = aData[0];
+                                                                var aDatasets1 = aData[1];
+
+                                                                var tamanio = 0;
+
+                                                                for (var data in aDatasets1) {
+                                                                    var valor = parseInt(aDatasets1[data]);
+                                                                    tamanio = tamanio + valor;
+                                                                }
+
+
+                                                                //for (var i = 0; i < tamanio; i++)
+                                                                document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: \n" + (tamanio).toString() + "<br>";
+                                                                @*var iter = aLabels;
+                                                                <p>@seccion.Item.ItemId</p>*@
+                                                                var dataT = {
+                                                                    labels: aLabels,
+                                                                    datasets: [{
+                                                                    label: "Respuestas",
+                                                                        data: aDatasets1,
+                                                                        fill: false,
+                                                                        backgroundColor: [
+                                                                            'rgba(255, 99, 132, 0.2)',
+                                                                            'rgba(54, 162, 235, 0.2)',
+                                                                            'rgba(255, 206, 86, 0.2)',
+                                                                            'rgba(75, 192, 192, 0.2)',
+                                                                            'rgba(153, 102, 255, 0.2)',
+                                                                            'rgba(255, 159, 64, 0.2)'
+                                                                        ],
+                                                                        borderColor: [
+                                                                            'rgba(255, 99, 132, 1)',
+                                                                            'rgba(54, 162, 235, 1)',
+                                                                            'rgba(255, 206, 86, 1)',
+                                                                            'rgba(75, 192, 192, 1)',
+                                                                            'rgba(153, 102, 255, 1)',
+                                                                            'rgba(255, 159, 64, 1)'
+                                                                        ],
+                                                                        borderWidth: 1
+                                                                    }]
+                                                                };
+                                                                var ctx = $("#pie_chart_@item_actual").get(0).getContext("2d");
+
+                                                                    var barChart = new Chart(ctx, {
+                                                                        type: 'horizontalBar',
+                                                                        data: dataT,
+                                                                        options: {
+                                                                            responsive: true,
+                                                                            maintainAspectRatio: false,
+                                                                            scales: { xAxes: [{ ticks: { beginAtZero: true } }] },
+                                                                            legend: { display: true },
+
+                                                                        },
+                                                                    })
+
+                                                            }
+                                                        });
+                                                            </script>
+                                                        }
                                                     }
                                                     else
                                                     {
@@ -241,7 +321,7 @@
                                                                                             for (var data in obs) {
                                                                                                 //if (@perfil_actual.Equals("Admin")) { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
                                                                                                 document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + " ";
-                                                                                                
+
                                                                                                 //} else {
 
                                                                                                 //}
