--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -9,7 +9,7 @@
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <style>
         #contenedorGrafo {
-            width: 450px;
+            width: 1080px;
             height: 500px;
             border: 0px solid #ddd;
             padding: 1px;
@@ -80,12 +80,12 @@
 
             @*Se ocupa poner una restriccion para no mostrar seciones repetidas*@
 
-            if (secciones.Contains(seccion_actual)) { seccion_repetida = true; }
-            else { secciones.Add(seccion_actual); seccion_repetida = false; }
+        if (secciones.Contains(seccion_actual)) { seccion_repetida = true; }
+        else { secciones.Add(seccion_actual); seccion_repetida = false; }
 
 
-            if (seccion_repetida == false)
-            {
+        if (seccion_repetida == false)
+        {
 
                 <div class="panel panel-default ">
                     <div class="panel-heading">
@@ -119,12 +119,8 @@
 
                                                     @if (seccion.Item.TipoPregunta != 1)
                                                     {
-                                                        if (seccion.Item.TipoPregunta == 2 || seccion.Item.TipoPregunta == 3 || seccion.Item.TipoPregunta == 6)
-                                                        {
-
-
                                                             @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
-                                                            //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
+                                                        //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
                                                             <p id="graf_@item_actual" style="float:inherit"></p>
                                                             <div id="contenedorGrafo">
                                                                 <canvas id="pie_chart_@item_actual"></canvas>
@@ -179,7 +175,7 @@
                                                                     }]
                                                                 };
                                                                 var ctx = $("#pie_chart_@item_actual").get(0).getContext("2d");
-
+                                                                if ('@seccion.Item.TipoPregunta' == 2 || '@seccion.Item.TipoPregunta' == 3 || '@seccion.Item.TipoPregunta' == 6) {
                                                                     var barChart = new Chart(ctx, {
                                                                         type: 'pie',
                                                                         data: dataT,
@@ -191,68 +187,7 @@
 
                                                                         },
                                                                     })
-
-                                                            }
-                                                        });
-                                                            </script>
-                                                        }
-                                                        else
-                                                        {
-                                                            <p id="graf_@item_actual" style="float:inherit"></p>
-                                                            <div id="contenedorGrafo">
-                                                                <canvas id="pie_chart_@item_actual"></canvas>
-                                                            </div>
-                                                            <script>
-                                                        $.ajax({
-                                                            type: "POST",
-                                                            url: "/VisualizarFormulario/GraficoPie/?itemId=@seccion.Item.ItemId",
-                                                            //data{ itemId: @seccion.Item.ItemId },
-                                                            contentType: "application/json; charset=utf-8",
-                                                            dataType: "json",
-                                                            success: function (chData) {
-                                                                var aData = chData;
-                                                                var aLabels = aData[0];
-                                                                var aDatasets1 = aData[1];
-
-                                                                var tamanio = 0;
-
-                                                                for (var data in aDatasets1) {
-                                                                    var valor = parseInt(aDatasets1[data]);
-                                                                    tamanio = tamanio + valor;
-                                                                }
-
-
-                                                                //for (var i = 0; i < tamanio; i++)
-                                                                document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: \n" + (tamanio).toString() + "<br>";
-                                                                @*var iter = aLabels;
-                                                                <p>@seccion.Item.ItemId</p>*@
-                                                                var dataT = {
-                                                                    labels: aLabels,
-                                                                    datasets: [{
-                                                                    label: "Respuestas",
-                                                                        data: aDatasets1,
-                                                                        fill: false,
-                                                                        backgroundColor: [
-                                                                            'rgba(255, 99, 132, 0.2)',
-                                                                            'rgba(54, 162, 235, 0.2)',
-                                                                            'rgba(255, 206, 86, 0.2)',
-                                                                            'rgba(75, 192, 192, 0.2)',
-                                                                            'rgba(153, 102, 255, 0.2)',
-                                                                            'rgba(255, 159, 64, 0.2)'
-                                                                        ],
-                                                                        borderColor: [
-                                                                            'rgba(255, 99, 132, 1)',
-                                                                            'rgba(54, 162, 235, 1)',
-                                                                            'rgba(255, 206, 86, 1)',
-                                                                            'rgba(75, 192, 192, 1)',
-                                                                            'rgba(153, 102, 255, 1)',
-                                                                            'rgba(255, 159, 64, 1)'
-                                                                        ],
-                                                                        borderWidth: 1
-                                                                    }]
-                                                                };
-                                                                var ctx = $("#pie_chart_@item_actual").get(0).getContext("2d");
-
+                                                                } else if ('@seccion.Item.TipoPregunta' == 4 || '@seccion.Item.TipoPregunta' == 5) {
                                                                     var barChart = new Chart(ctx, {
                                                                         type: 'horizontalBar',
                                                                         data: dataT,
@@ -261,14 +196,12 @@
                                                                             maintainAspectRatio: false,
                                                                             scales: { xAxes: [{ ticks: { beginAtZero: true } }] },
                                                                             legend: { display: true },
-
                                                                         },
                                                                     })
-
+                                                                }
                                                             }
                                                         });
                                                             </script>
-                                                        }
                                                     }
                                                     else
                                                     {
@@ -319,12 +252,12 @@
                                                                                         var ap2 = aData[3];
 
                                                                                             for (var data in obs) {
-                                                                                                //if (@perfil_actual.Equals("Admin")) { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
-                                                                                                document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + " ";
+                                                                                                if ('@perfil_actual' == "Admin") { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
+                                                                                                    document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + " ";
 
-                                                                                                //} else {
-
-                                                                                                //}
+                                                                                                } else if ('@perfil_actual' != "Admin"){
+                                                                                                     document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + " " ;
+                                                                                                }
                                                                                                 // Si no se acomodan las observaciones se bloquea el collapse de mostrar observaciones
                                                                                             }
                                                                                                 }
