--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
- 
+
 @Styles.Render("~/Content/scrollbar-tabla.css")
 @* Inclusiones necesarias para poder hacer validaciones *@
 <link href="~/Content/Site.css" rel="stylesheet" />
@@ -22,7 +22,7 @@
             {
                 type: "POST", //HTTP POST Method
                     url: "AgregarConformado", // Controller/View
-                     
+
                 data: { //Passing data
                     codigoFormulario:  @Html.Raw(Json.Encode(Model.Formulario.CodigoFormulario)),
                     nombreFormulario:  @Html.Raw(Json.Encode(Model.Formulario.Nombre)),
@@ -141,11 +141,11 @@
                     <td>
                         @switch (item.TipoPregunta)
                         {
-                            case 1: @Html.Raw("Texto Libre");
+                            case 1:@Html.Raw("Texto Libre");
                             break;
-                            case 3: @Html.Raw("Sí-No");
-                            break;
-                        }
+                        case 3: @Html.Raw("Sí-No");
+                        break;
+                }
 
 
                     </td>
@@ -164,23 +164,35 @@
 </div>
 
 <div class="row form-group">
-    <div class="col-sm-12 text-center">      
+    <div class="col-sm-12 text-center">
         <button id="btnSave" class="btn btn-secondary m-*-auto"><span class="oi oi-arrow-left"></span> Asignar pregunta</button>
     </div>
 </div>
 
-@*<div class="row">
-    @Html.Action("SeccionesAsignadas", new
-                    {CodForm = Model.Formulario.CodigoFormulario})
-</div>*@
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCopiarSeccion">
+    Copiar Secciones
+</button>
 
-@*<div class="row" id="ConformadosID">
+<div class="modal fade" id="modalCopiarSeccion" tabindex="-1" role="dialog" aria-labelledby="modalCopiarSeccion" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalCopiarSeccion"> <b> Copiar Seccion </b> </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                @Html.Partial("AsignarSecciones")
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-    @Html.Action("VistaFormularioVParcial", new { codForm = Model.Formulario.CodigoFormulario })
-
-</div>*@
-
- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
     Vista Previa
 </button>
 
@@ -207,8 +219,8 @@
 
 
 
-@Html.ActionLink("Terminar","Index", "Formulario", null, new { @class = "btn btn-default" })
-  
+@Html.ActionLink("Terminar", "Index", "Formulario", null, new { @class = "btn btn-default" })
+
 
 
 <script>
