--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarSecciones.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarSecciones.cshtml
@@ -1,9 +1,13 @@
-﻿@model Opiniometro_WebApp.Models.Conformado_Item_Sec_Form
+﻿@model Opiniometro_WebApp.Models.CrearFormularioModel
 
-@{
-    ViewBag.Title = "AsignarSecciones";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
-<h2>AsignarSecciones</h2>
 
+<h2>Copiar Secciones</h2>
+
+<div class="form-group">
+    @Html.Label( "Formulario", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+      @*  @Html.DropDownListFor(model => model.Formulario, new SelectList(ViewBag.CodigoFormulario, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control" })*@
+        @*@Html.ValidationMessageFor(model => model.NombreCategoria, "", new { @class = "text-danger" })*@
+    </div>
+</div>
