--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -33,8 +33,8 @@
         @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.TipoPregunta,
-             new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control", id = "comboboxtipopregunta",
-             placeholder = "TipoPregunta", data_width = "100%", onchange = "habilitarVistaParcialAgregarOpciones(this.value)"})
+             new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control",
+             id = "comboboxtipopregunta", placeholder = "TipoPregunta", data_width = "100%", onchange = "habilitarVistaParcialAgregarOpciones(this.value)"})
             @Html.ValidationMessageFor(model => model.TipoPregunta, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -76,8 +76,6 @@
     </div>
 
     <div class="form-group" id="opciones" hidden="hidden">
-        <input type="button" value="Agregar Opciones" class="btn btn-secondary" p id="botonAsignarOpciones" onclick="accionBotonAgregarOpciones()" />
-
         @Html.Partial("AgregarOpcionesVParcial")
     </div>
 
