Actividad supervisada 9, cambios en el javascript, controlador y modelo.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -27,7 +27,7 @@
                 <td >
                     @Html.DisplayFor(modelItem => item.item)
                     <script>
-                        escogerTipoRespuesta(1,true)
+                        escogerTipoRespuesta(2, false)
                     </script>
                     <br />
                 </td>
